@@ -16,6 +16,7 @@ Revision history for FusionInventory::Agent
          thanks Kevin Cousin who suggested the idea
        * Inventory must be run after the deployment (OcsDeploy)
        * Linux: fix Knoppix version format
+       * fix month number in process list start date
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
